fix overflow in mobile

--- a/stylesheets/commons/BigMatch.scss
+++ b/stylesheets/commons/BigMatch.scss
@@ -1107,6 +1107,7 @@ span.slash {
 		display: flex;
 		flex-flow: column;
 		padding: 0.5rem;
+		width: 100%;
 
 		.theme--dark & {
 			background-color: var( --clr-on-surface-dark-primary-8 );
@@ -1142,7 +1143,12 @@ span.slash {
 			}
 
 			&.match-table-wrapper {
+				display: block;
 				padding: unset;
+
+				@media ( max-width: 767px ) {
+					overflow-x: auto;
+				}
 				
 				& > table.wikitable {
 					border-radius: 0.5rem;
